# insight

./: .gitignore  .gitmodules  NOTICE  README.md  pyproject.toml
cluster/: README.md
cluster/real/: train_scoop_to_sweep.sh  train_xarm_pick_from_side_v5.sh  train_xarm_pick_from_top_v5.sh  train_xarm_pickplace_pour_05_10.sh  train_xarm_pickplace_to_twist_v5_unwrap.sh  train_xarm_scoop_100_primitives.sh  train_xarm_sweep_100.sh  train_xarm_unified_skills_05_12.sh
cluster/sim/: benchmark_primitives.sh  train_pi05_drawer_open_push.sh  train_pi05_human_pickplace_flip.sh  train_pi05_libero_lora.sh  train_pi05_oracle_flip_primitives.sh  train_pi05_pickplace_tilted_primitives.sh
docs/: checkpoint_setup.md  dataset_setup.md  getting_started.md  installation.md  safety.md
real/: README.md  __init__.py
real/calibration/: bounds_sweep.json
real/entry/: collect_demo.py  collect_demo_aa.py  inference.py  inference_aa.py  inference_primitives.py  inference_simple.py  measure_bounds.py  measure_tool_offset.py  run_flywheel.py  run_primitives.py  test_planner.py  test_policy_connection.py  test_preanalyze.py  vlm_check.py
real/xarm_flywheel/: __init__.py  args.py  executor.py  hardware.py  main.py  oracle.py  recording.py  runner.py  skill_gap.py  video.py
sim/: README.md  __init__.py
sim/libero_flywheel/: Dockerfile  README.md  __init__.py  compose.yml  convert_libero_data_to_lerobot.py  convert_libero_hdf5_to_lerobot.py  main.py  requirements.in  test_primitives.py  test_primitives_from_reset.py  vlm_feedback_flywheel.py
sim/libero_flywheel/data_processing/: densely_label_dataset.py
sim/libero_flywheel/vlm_flywheel/: __init__.py  base_execution.py  control.py  curation.py  env.py  flywheel_execution.py  prompts.py  reasoning.py  recording.py  vlm.py
src/insight/: __init__.py  executor.py  images.py  keyboard.py  planning.py  prompts.py  reasoning.py  rotation.py  skill_gap.py  types.py  vlm_client.py  voting.py
src/openpi/models_pytorch/: gemma_pytorch.py
src/openpi/policies/: lego_policy.py  libero_policy.py  xarm_policy.py  xarm_policy_prim.py
src/openpi/training/: config.py  data_loader.py  sim_configs.py  xarm_configs.py
src/openpi/training/misc/: roboarena_config.py
training/: __init__.py  fix_dataset_fps.py  visualize_lerobot_dataset.py  viz_open_gripper.py
training/preprocess/: filter_normalize_pour.py  filter_normalize_twist.py  merge_pickplace_pour.py  merge_pickplace_twist.py  merge_unified_skills.py  preprocess_all_primitives.py  preprocess_oracle_flip.py  preprocess_red_blue_only.py  visualize_trimmed_demos.py
